--- a/app/src/main/res/layout/row_recommended_funds_list_item.xml
+++ b/app/src/main/res/layout/row_recommended_funds_list_item.xml
@@ -45,7 +45,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_semibold"
-            android:padding="@dimen/space_4"
+            android:paddingTop="@dimen/space_1"
+            android:paddingStart="@dimen/space_4"
+            android:paddingEnd="@dimen/space_4"
+            android:paddingBottom="@dimen/space_4"
             android:text="@{fund.weightage + `%`}"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
