- Bug fixes - Bank Mandate Changes

--- a/app/src/main/res/layout/fragment_auto_debit.xml
+++ b/app/src/main/res/layout/fragment_auto_debit.xml
@@ -44,7 +44,7 @@
                     android:layout_marginEnd="4dp"
                     android:fontFamily="@font/lato_semibold"
                     android:maxLines="1"
-                    android:text="@{vm.bankMandate.name}"
+                    android:text="@{vm.bankMandate.branchBankIdBankName}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/item_selected_color"
                     app:layout_constraintBottom_toBottomOf="@id/ivBank"
@@ -58,6 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
+                    android:visibility="gone"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp10"
@@ -107,12 +108,15 @@
 
                 <TextView
                     android:id="@+id/tvBreachName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
                     android:fontFamily="@font/lato_semibold"
-                    android:text="@{vm.bankMandate.breachName}"
+                    android:maxLines="2"
+                    android:text="@{vm.bankMandate.branchBranchName}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/semi_black"
+                    app:layout_constraintEnd_toStartOf="@+id/tvIFSCCode"
                     app:layout_constraintStart_toStartOf="@id/tvBreachNameL"
                     app:layout_constraintTop_toBottomOf="@+id/tvBreachNameL"
                     tools:text="Ahmedabad" />
@@ -135,7 +139,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato_semibold"
                     android:minWidth="80dp"
-                    android:text="@{vm.bankMandate.IFSCCode}"
+                    android:text="@{vm.bankMandate.branchIfscCode}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/semi_black"
                     app:layout_constraintEnd_toEndOf="parent"
