--- a/app/src/main/res/layout/row_user_bank_list_mandate.xml
+++ b/app/src/main/res/layout/row_user_bank_list_mandate.xml
@@ -9,11 +9,13 @@
             name="isSelected"
             type="Boolean"/>
 
-        <import type="android.view.View" />
+        <variable
+            name="setDefault"
+            type="android.view.View.OnClickListener" />
 
         <variable
             name="widget"
-            type="com.tarrakki.api.model.UserBankMandateResponse.Data" />
+            type="com.tarrakki.api.model.BankDetail" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -23,6 +25,7 @@
         android:layout_marginEnd="@dimen/default_space"
         android:background="@drawable/shape_cart_view"
         android:elevation="@dimen/space_2"
+        android:onClick="@{setDefault}"
         android:padding="@dimen/space_8"
         tools:layout_marginBottom="@dimen/space_16">
 
@@ -42,22 +45,21 @@
             android:layout_marginEnd="4dp"
             android:fontFamily="@font/lato_semibold"
             android:maxLines="1"
-            android:text="@{widget.bankDetails.bankName}"
+            android:text="@{widget.branchBankIdBankName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/item_selected_color"
             app:layout_constraintBottom_toBottomOf="@id/ivBank"
-            app:layout_constraintEnd_toStartOf="@+id/cmDefault"
+            app:layout_constraintEnd_toStartOf="@+id/tvDefault"
             app:layout_constraintStart_toEndOf="@id/ivBank"
             app:layout_constraintTop_toTopOf="@id/ivBank"
             tools:text="ICICI Bank" />
 
         <RadioButton
-            android:clickable="false"
-            android:id="@+id/cmDefault"
+            android:id="@+id/tvDefault"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="false"
             android:checked="@{isSelected}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/white"
             android:textSize="@dimen/sp10"
             app:layout_constraintBottom_toBottomOf="@+id/ivBank"
@@ -84,12 +86,15 @@
 
         <TextView
             android:id="@+id/tvAccountNo"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:fontFamily="@font/lato_semibold"
-            android:text="@{widget.bankDetails.accountNumber}"
+            android:maxLines="2"
+            android:text="@{widget.accountNumber}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/semi_black"
+            app:layout_constraintEnd_toStartOf="@+id/gdlCenter"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvAccountNoL"
             tools:text="1210000091052" />
@@ -106,15 +111,18 @@
 
         <TextView
             android:id="@+id/tvBreachName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:fontFamily="@font/lato_semibold"
-            android:text="@{widget.bankDetails.branchName}"
+            android:maxLines="2"
+            android:text="@{widget.branchBranchName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/semi_black"
+            app:layout_constraintEnd_toStartOf="@+id/tvIFSCCode"
             app:layout_constraintStart_toStartOf="@id/tvBreachNameL"
             app:layout_constraintTop_toBottomOf="@+id/tvBreachNameL"
-            tools:text="Ahmedabad" />
+            tools:text="Ahmedabadab" />
 
         <TextView
             android:id="@+id/tvIFSCCodeLabel"
@@ -133,13 +141,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_semibold"
+            android:maxLines="2"
             android:minWidth="80dp"
-            android:text="@{widget.bankDetails.ifscCode}"
+            android:text="@{widget.branchIfscCode}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/semi_black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvIFSCCodeLabel"
-            tools:text="IC1C00000457" />
+            tools:text="ICIC00000457" />
 
         <android.support.constraint.Guideline
             android:id="@+id/gdlCenter"
@@ -148,44 +157,6 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.40" />
 
-        <View
-            android:id="@+id/mDivider2"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="@dimen/space_8"
-            android:background="@color/darker_gray"
-            android:visibility="@{widget.equals('2') ? View.VISIBLE : View.GONE}"
-            app:layout_constraintTop_toBottomOf="@+id/tvAccountNo" />
-
-        <TextView
-            android:id="@+id/tvInfo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:text="@string/normally_take_"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:visibility="@{widget.status.equals('2') ? View.VISIBLE : View.GONE}"
-            app:layout_constraintBottom_toBottomOf="@id/tvPending"
-            app:layout_constraintEnd_toStartOf="@+id/tvPending"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tvPending" />
-
-        <TextView
-            android:id="@+id/tvPending"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_8"
-            android:background="@drawable/shape_pending_bg"
-            android:paddingStart="@dimen/space_25"
-            android:paddingTop="@dimen/space_8"
-            android:paddingEnd="@dimen/space_25"
-            android:paddingBottom="@dimen/space_8"
-            android:text="@string/pending"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/white"
-            android:visibility="@{widget.equals('2') ? View.VISIBLE : View.GONE}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mDivider2" />
 
     </android.support.constraint.ConstraintLayout>
 
