--- a/app/src/main/res/layout/fragment_kycregistration_a.xml
+++ b/app/src/main/res/layout/fragment_kycregistration_a.xml
@@ -45,9 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:enabled="@{vm.isEdit()}"
                     android:hint="@string/full_name"
                     android:inputType="textCapSentences"
                     android:maxLines="1"
@@ -80,10 +78,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
                     android:layout_marginEnd="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
                     android:background="@drawable/shape_edt_gray_round"
                     android:drawableEnd="@drawable/ic_calendar"
-                    android:enabled="@{vm.isEdit()}"
                     android:hint="@string/date_of_birth_"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
@@ -155,9 +151,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:enabled="@{vm.isEdit()}"
                     android:hint="@string/email_id"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
@@ -189,11 +183,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:enabled="@{vm.isEdit()}"
                     android:hint="@string/mobile_number"
                     android:inputType="number"
+                    android:maxLength="10"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
                     android:paddingTop="@dimen/space_8"
@@ -228,9 +221,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
                     android:layout_marginEnd="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:enabled="@{vm.isEdit()}"
                     android:hint="@string/name_of_guardian"
                     android:inputType="textCapSentences"
                     android:maxLines="1"
@@ -281,11 +272,11 @@
                     android:paddingTop="@dimen/space_8"
                     android:paddingEnd="@dimen/default_space"
                     android:paddingBottom="@dimen/space_8"
-                    android:visibility="@{vm.guardianVisibility}"
                     android:text="@={vm.guardianPANNumber}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
                     android:textColorHint="@color/darker_gray"
+                    android:visibility="@{vm.guardianVisibility}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toEndOf="@id/edtGuardian"
@@ -307,10 +298,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
                     android:background="@drawable/shape_edt_gray_round"
                     android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
-                    android:enabled="@{vm.isEdit()}"
                     android:hint="@string/address_type"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
@@ -330,7 +319,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_space"
-                    android:text="@string/address_type"
+                    android:text="@string/address"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/edtAddressType" />
@@ -340,9 +329,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:enabled="@{vm.isEdit()}"
                     android:hint="@string/address"
                     android:inputType="textCapSentences"
                     android:maxLines="1"
@@ -378,9 +365,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
                     android:layout_marginEnd="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:enabled="@{vm.isEdit()}"
                     android:hint="@string/city"
                     android:inputType="textCapSentences"
                     android:maxLines="1"
@@ -417,11 +402,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/space_4"
                     android:layout_marginTop="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:enabled="@{vm.isEdit()}"
                     android:hint="@string/pincode"
                     android:inputType="number"
+                    android:maxLength="6"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
                     android:paddingTop="@dimen/space_8"
@@ -456,10 +440,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_4"
                     android:layout_marginEnd="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
                     android:background="@drawable/shape_edt_gray_round"
                     android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
-                    android:enabled="@{vm.isEdit()}"
                     android:hint="@string/state"
                     android:maxLines="1"
                     android:paddingStart="@dimen/default_space"
@@ -494,9 +476,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/space_4"
                     android:layout_marginTop="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:enabled="@{vm.isEdit()}"
                     android:hint="@string/country"
                     android:inputType="textCapSentences"
                     android:maxLines="1"
