--- a/app/src/main/res/layout/fragment_download_bank_mandate_from.xml
+++ b/app/src/main/res/layout/fragment_download_bank_mandate_from.xml
@@ -9,63 +9,76 @@
             type="com.tarrakki.module.bankmandate.DownloadBankMandateFromVM" />
     </data>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:padding="@dimen/default_space"
         tools:context=".module.bankmandate.DownloadBankMandateFromFragment">
 
-        <LinearLayout
+        <RelativeLayout
+            android:layout_above="@id/btnDownload"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@drawable/shape_cart_view"
             android:elevation="@dimen/space_2"
             android:orientation="vertical"
             android:padding="@dimen/space_8">
 
             <TextView
+                android:id="@+id/tvDownloadTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lato_semibold"
                 android:text="@string/bank_mandate_preview"
                 android:textColor="@color/black" />
 
-            <ImageView
+            <WebView
+                android:id="@+id/mWebView"
+                android:layout_below="@id/tvDownloadTitle"
+                android:layout_above="@id/lytDownloadContent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/default_space"/>
+
+            <LinearLayout
+                android:id="@+id/lytDownloadContent"
+                android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_space"
-                android:adjustViewBounds="true"
-                android:src="@drawable/bank_mandate_preview" />
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_space"
-                android:fontFamily="@font/lato_semibold"
-                android:text="@string/please_look_at_the_pre_filled"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/please_look_at_the_pre_filled"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_space"
-                android:fontFamily="@font/lato_semibold"
-                android:text="@string/sign_scan_and_upload"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:textColor="@color/black" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/sign_scan_and_upload"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/black" />
 
-        </LinearLayout>
+            </LinearLayout>
+
+        </RelativeLayout>
 
         <Button
+            android:layout_alignParentBottom="true"
             android:id="@+id/btnDownload"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/space_3"
             android:layout_marginTop="@dimen/default_space"
             android:background="@drawable/shape_btn_idle_bg"
             android:fontFamily="@font/lato_bold"
             android:text="@string/doenload_mandate_form"
             android:textColor="@color/white" />
 
-    </LinearLayout>
+    </RelativeLayout>
 </layout>
