--- a/app/src/main/res/layout/fragment_bank_mandate.xml
+++ b/app/src/main/res/layout/fragment_bank_mandate.xml
@@ -22,9 +22,67 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_marginBottom="@dimen/space_16"
+                android:visibility="@{vm.isNoBankAccount==true?View.VISIBLE:View.GONE}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/default_space"
+                android:layout_marginEnd="@dimen/default_space"
+                android:layout_marginTop="@dimen/default_space"
+                android:background="@drawable/shape_cart_view"
+                android:elevation="@dimen/space_2"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:padding="@dimen/space_8">
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/view2"
+                    android:layout_width="108dp"
+                    android:layout_height="108dp"
+                    android:elevation="12dp"
+                    app:cardBackgroundColor="@color/circular_bg"
+                    app:cardCornerRadius="54dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_goneMarginTop="@dimen/space_8">
+
+                    <ImageView
+                        android:id="@+id/ivProfile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:paddingStart="@dimen/default_space"
+                        android:paddingEnd="@dimen/default_space"
+                        android:paddingBottom="@dimen/default_space"
+                        android:src="@drawable/ic_bank" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|bottom"
+                        android:layout_marginTop="@dimen/default_space"
+                        android:layout_marginBottom="@dimen/space_12"
+                        android:text="@string/bank"
+                        android:textAllCaps="true"
+                        android:textColor="@color/black" />
+
+                </android.support.v7.widget.CardView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/no_bank_account_added_yet"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvBankMandate"
                 android:layout_width="match_parent"
+                android:visibility="@{vm.isNoBankAccount==false?View.VISIBLE:View.GONE}"
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
                 android:nestedScrollingEnabled="false"
@@ -44,7 +102,20 @@
                 android:orientation="vertical">
 
                 <Button
+                    android:visibility="@{vm.isNextVisible==true?View.VISIBLE:View.GONE}"
+                    android:id="@+id/btnNext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/space_8"
+                    android:background="@drawable/shape_btn_idle_bg"
+                    android:fontFamily="@font/lato_bold"
+                    android:text="@string/next"
+                    android:textColor="@color/white" />
+
+                <Button
+                    android:layout_marginTop="@dimen/space_8"
                     android:id="@+id/btnAdd"
+                    android:layout_marginBottom="@dimen/space_3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_btn_idle_bg"
@@ -52,17 +123,6 @@
                     android:text="@string/add_new_bank_account"
                     android:textColor="@color/white" />
 
-                <Button
-                    android:visibility="@{vm.isNextVisible==true?View.VISIBLE:View.GONE}"
-                    android:id="@+id/btnNext"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/default_space"
-                    android:layout_marginBottom="@dimen/space_8"
-                    android:background="@drawable/shape_btn_idle_bg"
-                    android:fontFamily="@font/lato_bold"
-                    android:text="@string/next"
-                    android:textColor="@color/white" />
             </LinearLayout>
 
         </LinearLayout>
